chore: add description and license metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "luar"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Luar is a Lua interpreter implemented in Rust"
+license = "MIT"
 
 [dependencies]
 ferris-says = "0.2"
